完成文章展示组件

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -5,7 +5,7 @@ body
   margin 0
   background #eee
   color #555
-  font-family DINRegular,-apple-system,BlinkMacSystemFont,PingFang SC,Helvetica Neue,Hiragino Sans GB,Segoe UI,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,sans-serif
+  font-family DINRegular,-apple-system,BlinkMacSystemFont,PingFang SC,Helvetica Neue,Hiragino Sans GB,Segoe UI,Microsoft YaHei,sans-serif
 a
   text-decoration none
   color #41b883
