完成评论组件，提取公共样式变量

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -1,14 +1,16 @@
+@import "variables.styl"
 html
 body
-  font-size 14px
+  font-size $font-size-s
   line-height 1.4
   margin 0
-  background #eee
-  color #555
-  font-family DINRegular,-apple-system,BlinkMacSystemFont,PingFang SC,Helvetica Neue,Hiragino Sans GB,Segoe UI,Microsoft YaHei,sans-serif
+  background $bg-dark-color
+  color $font-color
+  font-family DINRegular, -apple-system, BlinkMacSystemFont, PingFang SC, Helvetica Neue, Hiragino Sans GB, Segoe UI, Microsoft YaHei, sans-serif
+
 a
   text-decoration none
-  color #41b883
+  color $link-color
 
 ul
   margin-left 0
