优化特效，完善逻辑，文章页添加通栏阅读功能

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -17,3 +17,17 @@ ul
   padding-left 0
   list-style none
 
+
+.page-enter-active
+.page-leave-active
+    transition all 0.5s
+
+.page-enter
+.page-leave-to
+  opacity 0
+  transform translateX(100%)
+
+.page-enter-to
+.page-leave
+  opacity 1
+  transform translateX(0)
