--- a/assets/stylus/variables.styl
+++ b/assets/stylus/variables.styl
@@ -2,7 +2,7 @@ $width = 1070px
 $margin = 10px
 $menu-width = 200px
 $aside-width = 250px
-$main-width = $width - $margin * 2 - $aside-width - $menu-width
+$middle-width = $width - $margin * 2 - $aside-width - $menu-width
 
 $link-color = #41b883
 $font-color = #555
