--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -1,10 +1,17 @@
 @import "variables";
 
 @mixin clearfix() {
-  &::after {
-    display: block;
-    clear: both;
+  zoom: 1;
+  &:before,
+  &:after {
     content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+    visibility: hidden;
+    font-size: 0;
+    height: 0;
   }
 }
 
