--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -35,6 +35,18 @@ a {
 }
 
 .page-enter-active,
-.page-leave-active{
-  transition: transform 0.4s ease;
+.page-leave-active {
+  transition: transform 0.4s ease,opacity 0.4s ease;
+}
+
+.page-enter,
+.page-leave-to {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+.page-enter-to,
+.page-leave {
+  transform: translateX(0);
+  opacity: 1;
 }
