--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -12,16 +12,14 @@ $grid-col-prefixCls: c-col-container !default;
 //color
 $color-primary: #4dce9b;
 $color-primary-dark: #32908f;
-$color-danger: #EF233C;
-$color-danger-dark: #D90429;
+$color-danger: #F56C6C;
 $color-success: #028090;
-$color-success-dark: #05668d;
 $color-warn: #FA7921;
-$color-warn-dark: #E55934;
 $color-info: #2db7f5;
 $color-background-dark: #eee;
 $color-background: hsla(0, 0%, 100%, .6);
-$color-text: #657180;
+$color-text: #555;
+$color-text-white: #fff;
 $color-border-base: #d7dde4;
 $color-disabled: #c3cbd6;
 
