修改menu和aside的过渡动画，防止页面过渡时menu和aside被压缩

--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -44,6 +44,7 @@ input {
   transition: border-color $time-transition ease;
   background-color: transparent;
   font-size: 1rem;
+  color: $color-text;
   &:focus {
     border-color: $color-primary;
   }
