--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -10,15 +10,15 @@ html {
   background-color: $color-background-dark;
 }
 
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+//body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+//  margin: 0;
+//  padding: 0;
+//}
+ul,ol{
   margin: 0;
   padding: 0;
 }
 
-ul,
-ol {
-  list-style: none;
-}
 
 a {
   color: $color-primary;
