使markdown中的checkbox无法点击

--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -106,4 +106,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  // 禁止点击
+  pointer-events: none;
+  input[type='checkbox']{
+
+  }
 }
