--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -18,7 +18,6 @@
   }
   .code-main {
     position: relative;
-    overflow-x: auto;
     display: flex;
     flex-direction: row;
     border: 1px solid $color-border-base;
@@ -36,7 +35,8 @@
       margin-right: 1em;
     }
     .code-content {
-
+      position: relative;
+      overflow-x: auto;
     }
   }
 }
