--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -11,12 +11,21 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html,
-body{
+body {
   margin: 0;
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: hsla(0,0%,100%,.6);
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgba(95,95,95,.4);
+  transition: background-color 0.15s;
+}
 
 ul, ol {
   list-style: none;
