--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -40,7 +40,7 @@ a, .link {
   text-decoration: none;
   outline: none;
   cursor: pointer;
-  transition: color $time-transition ease;
+  transition: color 0.4s ease;
   &:hover,
   &:active {
     color: color-active($color-primary);
@@ -55,7 +55,7 @@ button {
   border: none;
   padding: 0.25rem 0.8rem;
   border-radius: 3px;
-  transition: background-color $time-transition ease;
+  transition: background-color 0.4s ease;
   cursor: pointer;
   color: $color-text;
   &:hover {
