--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -10,7 +10,7 @@
   .code-title {
     font-size: 1.2em;
     text-align: center;
-    background-color: $color-info;
+    background-color: $color-success;
     padding: 0.5em 0;
     color: $color-text-white;
     margin: 0;
