将文章详情抽取成组件

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -40,6 +40,7 @@ $color-white: #fff;
 $color-white-active: color-active($color-white);
 
 $color-background-dark: #eee;
+$color-background-dark-active: color-active($color-background-dark);
 
 $color-background: hsla(0, 0%, 100%, .6);
 $color-background-active: color-active($color-background);
