--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -20,6 +20,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 0.5rem;
+  height: 0.5rem;
   background-color: hsla(0, 0%, 100%, .6);
 }
 
@@ -27,6 +28,7 @@ body {
   background-color: rgba(95, 95, 95, .4);
   transition: background-color 0.15s;
 }
+
 
 ul, ol {
   list-style: none;
