--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -35,6 +35,9 @@ ul, ol {
 }
 
 a, .link {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
   color: $color-primary;
   background: transparent;
   text-decoration: none;
