--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -53,6 +53,10 @@ a, .link {
   }
 }
 
+.shadow{
+  box-shadow: 0 1px 3px rgba(26,26,26,.1);
+}
+
 button {
   outline: none;
   border: none;
@@ -64,6 +68,7 @@ button {
   color: $color-text;
 }
 
+//page
 .page-enter-active,
 .page-leave-active {
   transition: transform 0.4s ease, opacity 0.4s ease;
