--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -15,8 +15,8 @@ $grid-breakpoints: (
         lg: 1200px
 ) !default;
 
-$grid-row-prefixCls: c-row-container !default;
-$grid-col-prefixCls: c-col-container !default;
+$grid-row-prefixCls: c-row !default;
+$grid-col-prefixCls: c-col !default;
 
 //color
 $color-primary: #4dce9b;
