--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -36,24 +36,24 @@ ul, ol {
   padding: 0;
 }
 
-a, .link {
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  color: $color-primary;
-  background: transparent;
-  text-decoration: none;
-  outline: none;
-  cursor: pointer;
-  transition: color 0.4s ease;
-  &:hover,
-  &:active {
-    color: color-active($color-primary);
-    outline: none;
-    background-color: transparent;
-    text-decoration: none;
-  }
-}
+//a, .link {
+//  display: inline-block;
+//  padding: 0;
+//  margin: 0;
+//  color: $color-primary;
+//  background: transparent;
+//  text-decoration: none;
+//  outline: none;
+//  cursor: pointer;
+//  transition: color 0.4s ease;
+//  &:hover,
+//  &:active {
+//    color: color-active($color-primary);
+//    outline: none;
+//    background-color: transparent;
+//    text-decoration: none;
+//  }
+//}
 
 .shadow{
   box-shadow: 0 1px 3px rgba(26,26,26,.1);
