--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -55,7 +55,6 @@ $color-link: $color-primary;
 $color-link-active: $color-primary-active;
 
 $color-shadow: $color-background-active;
-
 //height
 $height-header: 4rem;
 $width-main: 75rem;
@@ -67,3 +66,38 @@ $z-index-m: 10;
 $z-index-l: 100;
 $z-index-xl: 1000;
 $z-index-max: 2000;
+
+//=======================================
+
+//color
+$primary-color          : #4dce9b;
+$info-color             : #2db7f5;
+$success-color          : #19be6b;
+$warning-color          : #ff9900;
+$error-color            : #ed3f14;
+$link-color             : #4dce9b;
+$link-hover-color       : tint($link-color, 20%);
+$link-active-color      : shade($link-color, 5%);
+$selected-color         : fade($primary-color, 90%);
+$tooltip-color          : #fff;
+$subsidiary-color       : #80848f;
+$rate-star-color        : #f5a623;
+
+//base
+$body-background        : #fff;
+$font-family            : "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+$code-family            : Consolas,Menlo,Courier,monospace;
+$title-color            : #1c2438;
+$text-color             : #495060;
+$border-radius-base     : 0.3em;
+$border-radius-small    : 0.2em;
+
+
+
+
+//avatar
+$avatar-bg: #ccc;
+$avatar-color: #fff;
+$avatar-size: 3em;
+
+
