--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -113,6 +113,9 @@ $checkbox-checked: $primary-color;
 
 //dropdown
 $dropdown-bg: #fff;
+$dropdown-hover-bg: #ecf5ff;
+$dropdown-hover-color: $primary-color;
+$dropdown-disabled-color: #bbb;
 
 //grid
 $sm: 768px;
