增强tab的功能

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -151,6 +151,9 @@ $select-active-bg: #ecf5ff;
 $select-active-color: $primary-color;
 $select-active-border-active: $primary-color;
 
+//tab
+$tab-active-color: $primary-color;
+
 
 
 
