--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -154,6 +154,12 @@ $select-active-border-active: $primary-color;
 //tab
 $tab-active-color: $primary-color;
 
+//back-top
+$back-top-color: $success-color;
+
+//badge
+$badge-bg: $error-color;
+$badge-color:#fff;
 
 
 
